--- a/src/practice/Task/BmiCalculator.css
+++ b/src/practice/Task/BmiCalculator.css
@@ -45,6 +45,7 @@ button{
     font-size: 20px;
     font-weight: bold;
     background-color: green;
+    background-color: rgb(red, green, blue);
     color: white;
 
 }
